# mpiwrap

./: .gitignore  CMakeLists.txt  license.md  readme.md
examples/: allgather.cpp  alltoall.cpp  bcast.cpp  hello_mpi.cpp  iallgather.cpp  ialltoall.cpp  ibcast.cpp  ireduce.cpp  iscatter_igather.cpp  isend_irecv.cpp  isend_irecv_alt.cpp  make_op.cpp  reduce.cpp  scatter_gather.cpp  scheduler.cpp  send_recv.cpp  sendrecv.cpp  sendrecv_replace.cpp  test.cpp
include/mpiwrap/: implementation.md  mpi.h  mpi.tpp  mpiwrap.h  scheduler.h  scheduler.tpp  test.cpp
include/mpiwrap/impl/: lambda_hack.h  ops.h
include/mpriwrap/: test.cpp
src/: mpi.cpp  scheduler.cpp
